--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -11,6 +12,6 @@
         <li><a href="./recipes/garlic-chicken.html" target="_blank">Garlic Chicken</a></li>
         <li><a href="./recipes/cheese-sandwich.html" target="_blank">Grilled Cheese Sandwich</a></li>
         <li><a href="./recipes/lasagna.html"target="_blank">Lasagna</a></li>
-      </ul>
+    </ul>
 </body>
 </html>
